Update API response data & add update avatar image
