# public/docs/api_spec.json
@@ -410,7 +410,7 @@
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "application/json": {
+                        "multipart/form-data": {
                             "schema": {
                                 "type": "object",
                                 "properties": {
@@ -444,6 +444,11 @@
                                         "type": "string",
                                         "format": "date",
                                         "nullable": true
+                                    },
+                                    "avatar": {
+                                        "type": "string",
+                                        "format": "binary",
+                                        "nullable": true
                                     }
                                 },
                                 "required": [
@@ -451,7 +456,8 @@
                                     "email",
                                     "phone",
                                     "sex",
-                                    "birth_date"
+                                    "birth_date",
+                                    "avatar"
                                 ]
                             }
                         }
@@ -2458,7 +2464,7 @@
                 ]
             }
         },
-        "/blogs": {
+        "/api/blogs": {
             "get": {
                 "description": "",
                 "parameters": [],
@@ -2487,7 +2493,7 @@
                 ]
             }
         },
-        "/blogs/categories": {
+        "/api/blogs/categories": {
             "get": {
                 "description": "",
                 "parameters": [],
@@ -2511,7 +2517,7 @@
                 ]
             }
         },
-        "/blogs/tags": {
+        "/api/blogs/tags": {
             "get": {
                 "description": "",
                 "parameters": [],
@@ -2535,7 +2541,7 @@
                 ]
             }
         },
-        "/blogs/{slug}": {
+        "/api/blogs/{slug}": {
             "get": {
                 "description": "",
                 "parameters": [],
